kubernetes/hw8/deployment_cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
