kubernetes/hw8/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: multitool
      port: 8082
      targetPort: 8082
