kubernetes/hw8/service_cache.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
spec:
  type: ClusterIP
  selector:
    app: cache
  ports:
    - protocol: TCP
      name: multitool
      port: 8081
      targetPort: 8081
