kubernetes/hw8/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      name: multitool
      port: 8080
      targetPort: 8080
